--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,42 +1,43 @@
-.member-card {
+.project-card {
   padding: 1vw;
   margin: 2vw;
-  border: 4px solid white;
+  border: 4px solid #282d35;
   border-radius: 5px;
   text-align: center;
   line-height: 60%;
   max-width: 260px;
+  color: #282d35;
 }
 
-.member-card > img {
+.project-card > img {
+  height: 256px;
   max-width: 256px;
 }
 
-.member-card p {
+.project-card p {
   line-height: normal;
 }
 
-.member-card h3 {
+.project-card h3 {
   font-weight: 100;
-  font-size: 1rem;
   color: #f3bf99;
 }
 
-.member-card button {
+.project-card button {
   background-color: transparent;
-  border: 1px solid white;
+  border: 1px solid #282d35;
   border-radius: 30px;
   width: 124px;
   height: 30px;
-  color: #ffffff;
+  color: #282d35;
 }
 
-.member-card button:hover {
-  background-color: #ffffff;
-  color: #282d35;
+.project-card button:hover {
+  color: #ffffff;
+  background-color: #282d35;
   transition: 0.5s;
 }
 
-.member-card a > button {
+.project-card a > button {
   text-decoration: none;
 }
