--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,5 +1,10 @@
 .about {
+  background-image: url('../images/bg.jpeg');
+  background-size: 100%;
+  background-repeat: no-repeat;
   padding: 20px;
+  height: 600px;
+  text-align: center;
 }
 
 .more-btn {
@@ -9,4 +14,10 @@
   color: white;
   width: 15%;
   height: 30px;
+}
+
+.more-btn:hover {
+  background-color: #ffffff;
+  color: #282d35;
+  transition: 0.5s;
 }
