--- a/src/styles/ProjectList.css
+++ b/src/styles/ProjectList.css
@@ -1,11 +1,12 @@
 .projects {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding: 20px;
   margin: 0;
 }
 
-.projects h1, .projects a {
-  color: #282D35;
+.projects h1,
+.projects a {
+  color: #282d35;
 }
 
 .project-container {
@@ -17,6 +18,14 @@
 .project-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+}
+
+@media (max-width: 480px) {
+  .project-list {
+    overflow-x: scroll;
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
 
 .project--title {
