✨ Use API instead of hardcoded data

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -41,3 +41,12 @@
 .project-card a > button {
   text-decoration: none;
 }
+
+.content--info > ul {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
