--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,17 +1,11 @@
 .about {
   background-image: url("../images/bg.png");
   background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   padding: 20px;
   height: 600px;
-  background-size: 100% 650px;
   text-align: center;
-}
-
-@media (max-width: 700px) {
-  .about {
-    height: max-content;
-    background-size: auto;
-  }
 }
 
 .more-btn {
