--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,5 +1,5 @@
 .about {
-  background-image: url("../images/bg.png");
+  background-image: url("../../public/images/bg.png");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
